--- a/DistFiles/Styles/Scripture/Leading_nc.css
+++ b/DistFiles/Styles/Scripture/Leading_nc.css
@@ -1,24 +1,2 @@
-.letData, .revData {
-       line-height: inherit;
-       -ps-fixed-line-height: inherit;
-}
-.Paragraph {
-       line-height: inherit;
-       -ps-fixed-line-height: inherit;
-}
-.revEntry {
-       line-height: inherit;
-       -ps-fixed-line-height: inherit;
-}
-.letHead {
-       line-height: inherit;
-       -ps-fixed-line-height: inherit;
-}
-.revHeader {
-       line-height: inherit;
-       -ps-fixed-line-height: inherit;
-}
-
-
-
+/* Leading_nc.css */
 
