TD-4454 [Linux] Text Merges in the Prince Pdf Output If I set Stylesheet as "Two Column"

--- a/DistFiles/Styles/Dictionary/Columns_2.css
+++ b/DistFiles/Styles/Dictionary/Columns_2.css
@@ -3,9 +3,11 @@
        column-count: 2; -moz-column-count: 2;
        column-gap: 12pt; -moz-column-gap: 12pt;
        column-fill: balance;
+       overflow-wrap: break-word;
 }
 .revData {
        column-count: 2; -moz-column-count: 2;
        column-gap: 12pt; -moz-column-gap: 12pt;
        column-fill: balance;
+       overflow-wrap: break-word;
 }
