TD-4712 Chapter number not reset for a new book

--- a/DistFiles/Styles/Scripture/Scripture.css
+++ b/DistFiles/Styles/Scripture/Scripture.css
@@ -344,3 +344,8 @@ content: " ";}
 .Chapter_Number {
     string-set: chapter content();
 }
+
+.scrBook {
+page-break-before: always;
+string-set: chapter '1';
+}
