TD-4708 Fixed the reversal entry

--- a/src/Test/PsExport/TestFiles/Input/T16/mat21-23.css
+++ b/src/Test/PsExport/TestFiles/Input/T16/mat21-23.css
@@ -11,8 +11,8 @@ span[lang='zxx']{ font-family: "Doulos SIL";}
 div[lang='zxx']{ font-family: "Doulos SIL";}
 span[lang='zxx']{ font-family: "Doulos SIL";}
 
-div[lang='nko']{ font-family: "Doulos SIL"; font-size: "11pt";}
-span[lang='nko']{ font-family: "Doulos SIL"; font-size: "11pt";}
+div[lang='nko']{ font-family: "Doulos SIL"; font-size: 11pt;}
+span[lang='nko']{ font-family: "Doulos SIL"; font-size: 11pt;}
 
 .id
 {
