--- a/DistFiles/Styles/Scripture/Page_size_A5.css
+++ b/DistFiles/Styles/Scripture/Page_size_A5.css
@@ -1,6 +1,6 @@
 ﻿@page {
     size: 14.8cm 21cm;
-    marks: crop cross;
+    /* marks: crop cross; */
     counter-increment: page;
     margin: 1.15cm 1.5cm;
 }
