--- a/src/Test/PsExport/TestFiles/Input/T3/Layout_02.css
+++ b/src/Test/PsExport/TestFiles/Input/T3/Layout_02.css
@@ -1,4 +1,4 @@
-@import "Scripture.css";
+@import "scripture.css";
 @import "Justified_Yes.css";
 @import "Page_size_A4.css";
 @import "Columns_2.css";
