TD-4594 (In Paratext export, character styles for proper names are not exported/applied)
*Added missing style in scripture.css

--- a/DistFiles/Styles/Scripture/Scripture.css
+++ b/DistFiles/Styles/Scripture/Scripture.css
@@ -336,6 +336,13 @@ page-break-after: avoid;
 .pn :after{
 content: " ";}
 
+.pn
+{
+font-size: 12pt;
+font-weight: bold;
+text-decoration: underline;
+}
+
 .CoverPageTitle {
 	font-family: "Charis SIL";
 	font-size: 24pt;
