--- a/DistFiles/Styles/Scripture/GPS12J9.css
+++ b/DistFiles/Styles/Scripture/GPS12J9.css
@@ -9,4 +9,5 @@
 @import "Leading_nc.css";
 @import "Pictures_Frame.css";
 @import "Rules_Yes.css";
+@import "Font_HeaderSize_9.css";
 @import "custom.css";
