--- a/DistFiles/Styles/Scripture/GPS21J11.css
+++ b/DistFiles/Styles/Scripture/GPS21J11.css
@@ -17,4 +17,5 @@
 @import "Running_Head_Mirrored_Chapter.css";
 @import "PageNumber_TopInside.css";
 @import "Rules_Yes.css";
+@import "Font_HeaderSize_10.css";
 @import "custom.css";
