--- a/DistFiles/Styles/Scripture/Layout_01.css
+++ b/DistFiles/Styles/Scripture/Layout_01.css
@@ -7,4 +7,5 @@
 @import "Running_Head_Every_Page.css";
 @import "PageNumber_BottomCenter.css";
 @import "Pictures_Yes.css";
+@import "Font_HeaderSize_11.css";
 @import "custom.css";
