--- a/DistFiles/Styles/Scripture/GPS21L11.css
+++ b/DistFiles/Styles/Scripture/GPS21L11.css
@@ -10,4 +10,5 @@
 @import "Leading_nc.css";
 @import "Pictures_Yes.css";
 @import "Rules_Yes.css";
+@import "Font_HeaderSize_11.css";
 @import "custom.css";
