--- a/DistFiles/Styles/Scripture/Layout_02.css
+++ b/DistFiles/Styles/Scripture/Layout_02.css
@@ -10,4 +10,5 @@
 @import "Rules_Yes.css";
 @import "PageNumber_TopCenter_Mirrored.css";
 @import "PageNumber_FirstPage.css";
+@import "Font_HeaderSize_11.css";
 @import "custom.css";
