--- a/DistFiles/Styles/Dictionary/epub_Dictionary.css
+++ b/DistFiles/Styles/Dictionary/epub_Dictionary.css
@@ -9,203 +9,6 @@ the user's preferences from the Configuration Tool:
 font-weight: normal;
 font-style: normal;
 }
-
-.complexentryform,
-.complexform-form,
-.crossref,
-.crossref-headword,
-.example-minor,
-.example-sub,
-.LexEntry-publishStemComponentTarget-MLHeadWordPub,
-.LexSense-publishStemComponentTarget-OwnerOutlinePub,
-.mainentryref-minor,
-.mainentryref,
-.mainentryrefminor,
-.sense-crossref,
-.sensecomplexentryform,
-.sensecrossref,
-.sense-crossref-sub,
-.sensemainentryref
-.reversal-form,
-.revsensenumber,
-.variantrefform {
-    font-weight : bold;
-}
-.crossreftype,
-.crossref-type {
-        font-style: italic;
-        font-weight: bold;
-}
-.entry {
-    margin-left : 3%;
-    margin-right: 3%;
-    padding-bottom: 1%;
-    text-indent: -3%;
-}
-.example,
-.grammatical-info-minor,
-.grammatical-info-sub,
-.grammaticalinfo,
-.grammatical-info,
-.lexref-type,
-.translation,
-.translation-minor,
-.translation-sub {
-    font-style : italic;
-}
-.headwordminor, .headword-minor {
-    font-weight: bold;
-    font-style: normal;
-    margin-right: 10px;
-}
-.partofspeech {
-font-weight: normal;
-font-style: italic;
-}
-
-.LexSense-publishStemMinorPrimaryTarget-OwnerOutlinePub, 
-.LexEntry-publishStemMinorPrimaryTarget-MLHeadWordPub,
-.LexEntry-publishRootMinorPrimaryTarget-MLHeadWordPub,
-.xsensenumber {
-    font-weight: bold;
-    margin-left: 5px;
-    margin-right: 5px;
-}
-.LexEntryType-publishStemSenseVariantType-ReverseAbbrPub {
-padding-right: 5px;
-}
-.letData {
-    text-align : left;
-} 
-.letHead {
-    border-bottom: .5pt solid #a00;
-    clear: both;
-    font-style: normal;
-    font-weight: bold;
-    text-align: center;
-}
-.letter {
-    font-weight : normal;
-    font-style : normal;
-    text-align : center;
-    text-indent : 0;
-    margin-left : 0;
-    padding-bottom : 2%;
-    padding-top : 2%;
-}
-.LexEntrypublishStemParaHomographNumber {
-    vertical-align: super;
-}
-.LexEntry-publishStemParaHomographNumber {
-    vertical-align: super;
-}
-.lexreftype,
-.lexref-type,
-.lexref-type-sub {
-        font-style: italic;
-        font-weight: bold;
-}
-.revData {
-    text-align: left;
-}
-.revEntry {
-    margin-left: 1pc;
-    text-indent: -1pc;
-}
-.revHeader {
-    font-weight: bold;
-    text-align: center;
-}
-.revhomographnumber {
-    vertical-align: sub;
-}
-.pronunciations,
-.senses {
-    margin-left: 0;
-    padding-left: 0;
-}
-.definition,
-.etymology-form,
-.etymology-gloss,
-.etymology-comment,
-.senses,
-.grammatical-info,
-.grammatical-info-sub,
-.entryref-type,
-.variant-type-minor,
-.LexEntryType-publishStemComplexFormType-ReverseAbbrPub {
-    padding-right: 0.5em;
-}
-.xitem + .xitem,
-.variantref-form-sub,
-.LexSense-publishStemComponentTarget-GlossPub,
-.LexEntry-publishStemComponentTarget-SummaryDefinitionPub {
-    /*padding-left: 0.5em;*/
-}
-.variantref-form-sub,
-.definition_L2,
-.pronunciations,
-.sense-complexform-form,
-.pronunciation,
-.pronunciation-minor,
-.etymology-form,
-.sense-variantref-form,
-.semantic-domains, 
-.examples, 
-.translations, 
-.primaryrefs,
-.entryref-component, 
-.primaryrefs-minor, 
-.variant-primary-minor, 
-.relations, 
-.lexref-targets, 
-.complex-subentry-minor,
-.variantrefs, 
-.variantref-form-minor,
-.variantref-form {
-    margin-left: 0;
-    text-indent: 0;
-}
-.sense {
-    font-weight: normal;
-}
-.subentry { }
-.xhomographnumber {
-    font-weight: normal;
-    font-style: normal;
-    vertical-align : -33%;
-    text-indent : 0;
-    margin-left : 0;
-    padding-right: 2px;
-    line-height: 80%;
-}
-.xlanguagetag {
-        display: none;
-}
-.Front_Matter {
-margin-left : 4%;
-margin-right: 4%;
-text-align: left;
-}
-.entry .senses > .sense + .sense::before {
-content: "";
-}
-
-.letter
-{
-	margin-top:10pt;
-	margin-bottom:10pt;
-	line-height:150%;
-}
-.minorentryvariant {
-    margin-left : 3%;
-    margin-right: 3%;
-    padding-bottom: 1%;
-    text-indent: -3%;
-}
-.minorentrycomplex {
-    margin-left : 3%;
-    margin-right: 3%;
-    padding-bottom: 1%;
-    text-indent: -3%;
+.entry .subentries .subentry {
+	margin-left: -20pt;
 }
