TD-4396 Pathway justify not working on minor entries

--- a/DistFiles/Styles/Dictionary/Justified_Yes.css
+++ b/DistFiles/Styles/Dictionary/Justified_Yes.css
@@ -17,3 +17,18 @@
     counter-reset: complexformpara;
     text-indent: 2pc;
 }
+.minorentry {
+       text-align: justify;
+       margin-left: 12pt;
+       text-indent: -12pt;
+}
+.minorentryvariant {
+       text-align: justify;
+       margin-left: 12pt;
+       text-indent: -12pt;
+}
+.minorentrycomplex {
+       text-align: justify;
+       margin-left: 12pt;
+       text-indent: -12pt;
+}
