TD-4513 Use Styles from Custom sty file

--- a/src/Test/ParatextSupport/TestFiles/Expected/uisTrans.css
+++ b/src/Test/ParatextSupport/TestFiles/Expected/uisTrans.css
@@ -14,3 +14,14 @@ font-style: italic;
 direction: ltr;
 }
 
+.pictureCaption
+{
+font-style: italic;
+font-size: 11pt;
+}
+
+.scrBody
+{
+direction: ltr;
+}
+
